os paths imporved and class MonicaFunc has been improved

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ exp2.py
 aclImdb
 __pycache__/
 flagged
+log.csv
+.dockerignore
+compose.yaml
+exp.py
+sentiment_model/
+.dockerignore
+exp3.py
+exp.py
